# docs/swagger.yaml
@@ -80,7 +80,7 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/gintest_controllers.ErrorResponse'
+            $ref: '#/definitions/github.com_gjlanc65_gintest_controllers.ErrorResponse'
       summary: add a new item to the segment list
   /segments/{id}:
     get:
@@ -102,6 +102,6 @@ paths:
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/gintest_controllers.ErrorResponse'
+            $ref: '#/definitions/github.com_gjlanc65_gintest_controllers.ErrorResponse'
       summary: get a segment item by ID
 swagger: "2.0"
